Dashboard Reportes, PROCESAMIENTO, TX, ACCESO, GESTION

--- a/libs/config/db_configuration.ini
+++ b/libs/config/db_configuration.ini
@@ -1,7 +1,7 @@
 type = mysql
 host = localhost
-user = root
-pass = jonas
+user = soporte
+pass = Soporte2020
 db = soporte
 port = 3306
 charset = utf8
